<resources>
    <string name="app_name">Tetris with life</string>
    <string name="new_game_main_button">New game</string>
    <string name="options_main_button">Options</string>
    <string name="exit_main_button">Exit</string>

    <string name="name_options_textview">Name:</string>
    <string name="name_options_editview">Enter name</string>
    <string name="exit_options_button">Exit</string>

    <string name="new_game_game_button">New game</string>
    <string name="pause_game_button">Pause</string>
    <string name="resume_game_button">Resume</string>
    <string name="exit_game_button">Exit</string>
    <string name="scores_game_textview">Scores:\n %1$s</string>
    <string name="record_game_textview">Record:\n %1$s</string>
    <string name="infobreath_game_textview">Breath\n Seconds left:\n %1$s</string>

    <string name="left_game_button">Left</string>
    <string name="right_game_button">Right</string>
    <string name="down_game_button">Down</string>
    <string name="rotate_game_button">Rotate</string>

    <string name="name">Name: %1$s</string>
    <string name="enter_name">Enter name</string>
    <string name="name_options">Your name</string>

    <string name="game_finish">The game is over</string>
    <string name="game_your_scores">You scored %1$s points</string>
    <string name="game_alert_ok">Continue</string>
    <string name="game_alert_cancel">Go back to the menu</string>
</resources>