<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="#161616"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <SurfaceView
        android:id="@+id/game_game_surfaceview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rotate_game_button"
        app:layout_constraintEnd_toStartOf="@+id/new_game_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SurfaceView
        android:id="@+id/nextfigure_game_surfaceview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_game_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/new_game_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextfigure_game_surfaceview" />

    <Button
        android:id="@+id/pause_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/pause_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/new_game_game_button" />

    <Button
        android:id="@+id/exit_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/exit_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/pause_game_button" />

    <TextView
        android:id="@+id/scores_game_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/scores_game_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/exit_game_button" />

    <TextView
        android:id="@+id/record_game_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/record_game_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/scores_game_textview" />

    <TextView
        android:id="@+id/infobreath_game_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/infobreath_game_textview"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/record_game_textview" />

    <TextView
        android:id="@+id/breath_game_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
        app:layout_constraintTop_toBottomOf="@+id/infobreath_game_textview" />


    <Button
        android:id="@+id/left_game_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/left_game_button"
        app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/down_game_button" />

    <Button
        android:id="@+id/right_game_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/right_game_button"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/down_game_button" />

    <Button
        android:id="@+id/down_game_button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:text="@string/down_game_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_game_button"
        app:layout_constraintStart_toEndOf="@+id/left_game_button" />

    <Button
        android:id="@+id/rotate_game_button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_baseline_rotate_right_24"
        android:text="@string/rotate_game_button"
        app:layout_constraintBottom_toTopOf="@+id/down_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>